<resources>
    <string name="app_name">ToDo Guru</string>
    <string name="add_task">Add new Task</string>
    <string name="update_task">Update Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="estimated">Estimated Time (written in full hours)</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="viewTask">View Task</string>
    <string name="create_button">Create</string>
    <string name="display_task">Display task</string>
    <string name="priority_task">Priority task</string>
    <string name="mark_as_done_short">Done</string>
    <string name="mark_as_done_long">Mark selected tasks as Done</string>
    <string name="DueDate">dueDate</string>
    <string name="update_button">Update</string>
    <string name="notification_content_title">ToDo Guru Reminder</string>
    <string name="notification_content_description">Have you finished your tasks yet?</string>
    <string name="delete_tasks_short">Delete</string>
    <string name="delete_tasks_long">Delete selected tasks</string>
    <string name="top_description_1">ToDo Guru description (1/3)</string>
...
    <string name="description_1">Welcome to ToDo Guru, together we will make your life more efficient.</string>
    <string name="description_2">The home screen shows all the tasks that you have added. You can mark a task as complete or delete it. If you want to add a task, click the plus sign. </string>
    <string name="description_3">The app will keep track of the time you have spent on different tasks and display how many of the tasks been completed.</string>
    <string name="description_4">Press Next to see all the features and get started.</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev.</string>
    <string name="skip_button">Skip</string>
    <string name="view_task">View Task</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_category">Set Category</string>
    <string name="category">Category</string>
    <string name="set_alarm">Your ToDo Guru Alarm</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="complete">Complete</string>
    <string name="complete_list">List of completed tasks</string>
    <string name="track_time">Track time spent on task</string>
...
