...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/layout_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        style="@style/textBox"
        >

...
            android:inputType="text"
            android:importantForAutofill="no"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        style="@style/textBox"
        >

...
            android:inputType="text"
            android:importantForAutofill="no"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dueDateTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DueDate"
        style="@style/textBox"
        >

...
            android:importantForAutofill="no"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estimatedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estimated"
        style="@style/textBox"
        >

...
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:text="@string/add_reminder"
            android:textSize="19sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white_24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/createButton"
        android:textSize="14sp" />

...
